--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+
+    <!-- Header -->
     <div class="heading">
       <h1 class="show-modal">Add Bookmarks</h1>
     </div>
 
     <div class="bookmark-container">
+
+      <!-- Bookmark item -->
       <div class="item">
         <i class="fas fa-times"  title="Delete Bookmark"></i>
         <a href="https://www.youtube.com/"><img
@@ -31,45 +35,42 @@
         </div>
       </div>
 
-      <div class="item">
-        <i class="fas fa-times"></i>
-        <img
-          height="20.8"
-          width="20.8"
-          src="https://icons.duckduckgo.com/ip3/www.youtube.com.ico"
-        />
-        <div class="name">
-          <a href="https://www.youtube.com/" target="_blank">Youtube</a>
-        </div>
-      </div>
+      
 
-      <div class="item">
-        <i class="fas fa-times"></i>
-        <img
-          height="20.8"
-          width="20.8"
-          src="https://icons.duckduckgo.com/ip3/www.youtube.com.ico"
-        />
-        <div class="name">
-          <a href="https://www.youtube.com/" target="_blank">Youtube</a>
-        </div>
-      </div>
+<!-- Modal Container -->
 
-      <div class="item">
-        <i class="fas fa-times"></i>
-        <img
-          height="20.8"
-          width="20.8"
-          src="https://icons.duckduckgo.com/ip3/www.youtube.com.ico"
-        />
-        <div class="name">
-          <a href="https://www.youtube.com/" target="_blank"
-            >Youtubeasdasdjhadh</a
-          >
+      <div class="modal-container">
+        <!-- display-modal -->
+        <div class="modal">
+          <div class="modal-heading">
+            <i class="fas fa-times modal-cross"></i>
+            <h2> Add Bookmark</h2>
+          </div>
+          <div class="modal-content">
+            <form class="bookmark-form">
+              <div class="form-group">
+                <label class="form-label" for="website-name">Website Name</label>
+                <br>
+                <input class="form-input"  id="to-focus"></input>
+              </div>
+
+              <div class="form-group">
+                <label class="form-label" for="website-URL">Website URL</label>
+                <br>
+                <input class="form-input"></input>
+              </div>
+              <button class="form-button" type="submit">Save</button>
+
+            </form>
+          </div>
+
         </div>
       </div>
 
     </div>
+
+
+
 
     <!-- Script -->
     <script src="script.js"></script>
