--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <!-- Bookmark item -->
       <div class="item">
-        <i class="fas fa-times"  title="Delete Bookmark"></i>
+        <i class="fas fa-times" class="to-delete-bookmark" title="Delete Bookmark"></i>
         <a href="https://www.youtube.com/"><img
             height="20.8"
             width="20.8"
@@ -51,13 +51,13 @@
               <div class="form-group">
                 <label class="form-label" for="website-name">Website Name</label>
                 <br>
-                <input class="form-input"  id="to-focus"></input>
+                <input class="form-input" id="website-name"></input>
               </div>
 
               <div class="form-group">
                 <label class="form-label" for="website-URL">Website URL</label>
                 <br>
-                <input class="form-input"></input>
+                <input class="form-input" id="website-url"></input>
               </div>
               <button class="form-button" type="submit">Save</button>
 
