--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
 
     </div>
 
-
+    <div class="footer">
+      <p>Developed by <a href="https://github.com/Dilsshad1Alam2" target="_blank">Dilshad Alam</a> <br> Copyright &copy; 2020 </p>
+    </div>
 
 
     <!-- Script -->
