--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="modal-content">
             <form class="bookmark-form" autocomplete="off">
               <div class="form-group">
-                <label class="form-label" for="website-name">Website Name</label>
+                <label class="form-label" for="website-name">Bookmark Name</label>
                 <br>
                 <input class="form-input" id="website-name"></input>
               </div>
